<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.company</groupId>
    <artifactId>testnet</artifactId>
    <version>1.0-SNAPSHOT</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>

    <dependency>
        <groupId>com.msgilligan.bitcoinj-rpcclient</groupId>
        <artifactId>bitcoinj-rpcclient</artifactId>
        <version>0.2.6</version>
    </dependency>
    <dependency>
        <groupId>com.msgilligan.bitcoinj-server</groupId>
        <artifactId>bitcoinj-server</artifactId>
        <version>0.2.6</version>
    </dependency>
    <dependency>
        <groupId>com.msgilligan.bitcoinj-json</groupId>
        <artifactId>bitcoinj-json</artifactId>
        <version>0.2.6</version>
    </dependency>
    <dependency>
        <groupId>com.msgilligan.bitcoinj-peerserver</groupId>
        <artifactId>bitcoinj-peerserver</artifactId>
        <version>0.2.6</version>
    </dependency>
    <dependency>
        <groupId>com.msgilligan.bitcoinj-proxy</groupId>
        <artifactId>bitcoinj-proxy</artifactId>
        <version>0.2.6</version>
    </dependency>
    <dependency>
        <groupId>com.msgilligan.bitcoinj-money</groupId>
        <artifactId>bitcoinj-money</artifactId>
        <version>0.2.6</version>
    </dependency>
    <dependency>
        <groupId>com.msgilligan.bitcoinj-dsl</groupId>
        <artifactId>bitcoinj-dsl</artifactId>
        <version>0.2.6</version>
    </dependency>
    <dependency>
        <groupId>com.msgilligan.bitcoinj-dsljs</groupId>
        <artifactId>bitcoinj-dsljs</artifactId>
        <version>0.2.6</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.bitcoinj/bitcoinj-core -->
    <dependency>
        <groupId>org.bitcoinj</groupId>
        <artifactId>bitcoinj-core</artifactId>
        <version>0.14.5</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
    <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-core</artifactId>
        <version>2.9.5</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
    <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>2.9.5</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/wf.bitcoin/JavaBitcoindRpcClient -->
    <dependency>
        <groupId>wf.bitcoin</groupId>
        <artifactId>JavaBitcoindRpcClient</artifactId>
        <version>0.9.19</version>
    </dependency>

</dependencies>

</project>